implement basic RSA digital signature algorithm

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
 
     </head>
     <body>
-        <img src = "meme.jpg">
-        <script src = "./cryptolib.js">
+        <input type="file", id="input_file">
+        <button id="sig_button">Signature</button>
+        <img src = "./data/meme.jpg">
+        <script src = "./src/stream.js">
         </script>
-        <script src = "./encryptionlib.js">
+        <script src = "./src/cryptolib.js">
         </script>
-        <script src = "./main.js">
+        <script src = "./src/encryptionlib.js">
+        </script>
+        <script src = "./src/digsignature.js">
+        </script>
+        <script src = "./src/main.js">
         </script>
     </body>
 </html>
