--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         </script>
         <script src = "./src/digsignature.js">
         </script>
+        <script src = "./src/pocker.js">
+        </script>
         <script src = "./src/main.js">
         </script>
     </body>
