Prepare project structure for Zero-Knowledge Proof Task

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         </script>
         <script src = "./src/pocker.js">
         </script>
+        <script src = "./src/blindSignature.js">
+        </script>
         <script src = "./src/main.js">
         </script>
     </body>
